--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -6,7 +6,8 @@
 
   <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Rajdhani:400|Raleway:500,900" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -14,10 +15,69 @@
   <![endif]-->
 </head>
 
-  <body>
+<body>
+  <div id="nav-wrapper">
+    <div id="nav-container">
+      <nav>
+        <a id="active-page" href="index.html">Home</a>
+        <a href="services.html">Services</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <a href="index.html" ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
+    </div>
+  </div>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
-  </body>
+  <header>
+    <div id="call-to-action-container">
+      <h1>
+        Innovation <br>
+        On <br>
+        Demand
+      </h1>
+      <a href="services.html"><button>Get Started</button></a>
+    </div>
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+  </header>
+
+  <div id="content-container">
+    <section>
+      <h2>Lorem</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+    <section>
+      <h2>Ipsum</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    <section>
+      <h2>Dolor</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+    <section>
+      <h2>Sit</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+    <section>
+      <h2>Amet</h2>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+  </div>
+
+  <div id="contact-container">
+    <h2><a  name="contact">Contact</a></h2>
+    <address>
+      123 Way 456 Street <br>
+      Somewhere, USA <br><br>
+      1 (888) 888-8888 <br><br>
+      sales@greatidea.io
+    </address>
+  </div>
+
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
+</body>
 </html>
