--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -6,8 +6,8 @@
 
   <title>Great Idea!</title>
 
-  <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Rajdhani:400|Raleway:500,900" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Rajdhani:400|Raleway:500,900" rel="stylesheet" type="text/css"> -->
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
