--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -30,8 +30,8 @@
     </div>
   </div>
 
-  <header>
-    <div id="call-to-action-container">
+  <header id="index-header">
+    <div>
       <h1>
         Innovation <br>
         On <br>
@@ -42,7 +42,7 @@
     <img src="img/header-img.png" alt="Image of a code snippet.">
   </header>
 
-  <div id="content-container">
+  <div id="index-content">
     <section>
       <h2>Lorem</h2>
       <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
@@ -66,7 +66,7 @@
     </section>
   </div>
 
-  <div id="contact-container">
+  <div id="index-contact">
     <h2><a  name="contact">Contact</a></h2>
     <address>
       123 Way 456 Street <br>
