--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -6,8 +6,7 @@
 
   <title>Great Idea! - Services</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Rajdhani:400|Raleway:500,900" rel="stylesheet" type="text/css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Raleway:400" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
