--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -30,50 +30,52 @@
     </div>
   </div>
 
-  <header id="index-header">
-    <div>
-      <h1>
-        Innovation <br>
-        On <br>
-        Demand
-      </h1>
-      <a href="services.html"><button>Get Started</button></a>
+  <div id="flex-wrap">
+    <header id="index-header">
+      <div>
+        <h1>
+          Innovation <br>
+          On <br>
+          Demand
+        </h1>
+        <a href="services.html"><button>Get Started</button></a>
+      </div>
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </header>
+
+    <div id="index-content">
+      <section>
+        <h2>Lorem</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section>
+        <h2>Ipsum</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+      <section>
+        <h2>Dolor</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section>
+        <h2>Sit</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+      <section>
+        <h2>Amet</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
     </div>
-    <img src="img/header-img.png" alt="Image of a code snippet.">
-  </header>
 
-  <div id="index-content">
-    <section>
-      <h2>Lorem</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
-    <section>
-      <h2>Ipsum</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-    <section>
-      <h2>Dolor</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
-    <section>
-      <h2>Sit</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
-    <section>
-      <h2>Amet</h2>
-      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
-  </div>
-
-  <div id="index-contact">
-    <h2><a  name="contact">Contact</a></h2>
-    <address>
-      123 Way 456 Street <br>
-      Somewhere, USA <br><br>
-      1 (888) 888-8888 <br><br>
-      sales@greatidea.io
-    </address>
+    <div id="index-contact">
+      <h2><a  name="contact">Contact</a></h2>
+      <address>
+        123 Way 456 Street <br>
+        Somewhere, USA <br><br>
+        1 (888) 888-8888 <br><br>
+        sales@greatidea.io
+      </address>
+    </div>
   </div>
 
   <footer>
