--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -29,59 +29,61 @@
     </div>
   </div>
 
-  <header id="services-header">
-    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-    <section>
-      <h1>Services</h1>
-      <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    </section>
-  </header>
+  <div id="flex-wrap">
+    <header id="services-header">
+      <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+      <section>
+        <h1>Services</h1>
+        <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+      </section>
+    </header>
 
-  <div id="services-content">
-    <section>    
-      <h2>Digital Design</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-    <section>
-      <h2>UX / UI</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-    <section>
-      <h2>Digital Marketing</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-    <section>
-      <h2>Web Development</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-    <section>
-      <h2>iOS Development</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-    <section>
-      <h2>Android Development</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <a href=""><button>Learn More</button></a>
-    </section>
-  </div>
+    <div id="services-content">
+      <section>    
+        <h2>Digital Design</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+      <section>
+        <h2>UX / UI</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+      <section>
+        <h2>Digital Marketing</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+      <section>
+        <h2>Web Development</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+      <section>
+        <h2>iOS Development</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+      <section>
+        <h2>Android Development</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <a href=""><button>Learn More</button></a>
+      </section>
+    </div>
 
-  <div id="services-facts">
-    <section>
-      <h2>Some Facts About Our Services</h2>
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-      <ul>
-        <li>Awesome thing</li>
-        <li>Amazing thing</li>
-        <li>Cool thing</li>
-        <li>Great thing</li>
-      </ul>
-    </section>
-    <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    <div id="services-facts">
+      <section>
+        <h2>Some Facts About Our Services</h2>
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+        <ul>
+          <li>Awesome thing</li>
+          <li>Amazing thing</li>
+          <li>Cool thing</li>
+          <li>Great thing</li>
+        </ul>
+      </section>
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+    </div>
   </div>
 
   <footer>
