--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -6,8 +6,8 @@
 
   <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Rajdhani:400|Raleway:500,900" rel="stylesheet" type="text/css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Raleway:400" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -23,8 +23,8 @@
         <a href="services.html">Services</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#contact">Contact</a>
+        <a href="about.html">About</a>
+        <a href="#">Contact</a>
       </nav>
       <a href="index.html" ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </div>
@@ -68,7 +68,7 @@
     </div>
 
     <div id="index-contact">
-      <h2><a  name="contact">Contact</a></h2>
+      <h2>Contact</h2>
       <address>
         123 Way 456 Street <br>
         Somewhere, USA <br><br>
