--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -7,6 +7,7 @@
   <title>Great Idea! - Services</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Raleway:400" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="css/index.css">
 
   <!--[if lt IE 9]>
@@ -18,12 +19,12 @@
   <div id="nav-wrapper">
     <div id="nav-container">
       <nav>
-        <a id="active-page" href="index.html">Home</a>
-        <a href="services.html">Services</a>
+        <a href="index.html">Home</a>
+        <a id="active-page" href="services.html">Services</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#contact">Contact</a>
+        <a href="about.html">About</a>
+        <a href="#">Contact</a>
       </nav>
       <a href="index.html" ><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
     </div>
